[package]
name = "syewreal"
version = "0.1.0"
edition = "2021"
target="wasm32-unknown-unknown"

[features]
log_traffic=["js-sys"]
panic_on_error=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.20"}
serde = "1.0.145"
# serde_json = "1.0"
wasm-bindgen-futures = "0.4.33"
url = "2.3.1"
web-sys = "0.3.60"
surrealdb = { git="https://github.com/Ichmed/surrealdb.git", default-features = false, features=["protocol-ws"] }
surreal_macros = {path = "surreal_macros"}
serde_json = "1.0.91"
js-sys = {version = "0.3.60", optional=true}
async-trait = "0.1.63"