[package]
name = "surreal_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro=true

[dependencies]
syn = "1.0.107"
quote = "1.0"
serde = {version = "1.0.145", features=["serde_derive"]}
surrealdb = { git="https://github.com/surrealdb/surrealdb.git", default-features = false, features=["protocol-ws"] }