[package]
name = "todolist"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syewreal = {path="../..", features= ["log_traffic"]}
# syewreal = {path="../.."}
yew = {version = "0.20", features = ["csr"]}
serde = "1.0.145"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
